[build-system]
requires = [
    "setuptools >= 61",
    'tomli; python_version < "3.11"',
]
build-backend = "setuptools.build_meta"

[project]
name = "pyrms"
dynamic = ["version"]
authors = [
    { name = "Andrew Leaf", email = "aleaf@usgs.gov" },
]
description = "A crude python interface to PRMS, especially for gridded models."
readme = "Readme.md"
keywords = ["PRMS", "hydrology"]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas"
]

[project.optional-dependencies]
optional = [
    "matplotlib",
    "fiona",
    "shapely",
    "geopandas",
    "gis-utils"
]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-timeout"
]
docs = [
    "matplotlib",
    "modflow-export[optional]",
    "ipython[kernel]",
    "sphinx",
    "numpydoc",
    "nbsphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme"
]

[project.urls]
repository = "https://github.com/aleaf/pyrms"

[tool.setuptools.packages.find]
include = ["pyrms", "pyrms.*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --durations=0"
testpaths = "pyrms"
